@@ -1,3 +1,7 @@
+2004-05-18  Jonathan Wakely  <redi@gcc.gnu.org>
+
+	* include/ext/stdio_filebuf.h: Update comments to reflect PR 11691.
+
 2004-05-18  Jan Beulich  <jbeulich@novell.com>
  
         PR libstdc++/15489
